[gd_scene load_steps=5 format=2]

[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/EndingSummaryWSP/Scenes/ES_Scene01/ES_Scene01.gd" type="Script" id=1]
[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/FirstTimeQuestionWSPanel/Subs/FTQ_CustomLabel/FTQ_CustomLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/EndingSummaryWSP/Assets/Dog/EndingSummaryWSP_Dog_0000.png" type="Texture" id=3]
[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/EndingSummaryWSP/Assets/EndingSummaryWSP_Player_Opened.png" type="Texture" id=4]

[node name="ES_Scene01" type="Control"]
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 1 )

[node name="FTQ_Label_Victory" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -380.0
margin_top = 138.0
margin_right = 380.0
margin_bottom = 178.0
default_font_size = 40

[node name="PlayerTextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -21.5
margin_right = -34.0
margin_bottom = 21.5
texture = ExtResource( 4 )

[node name="AnimalTextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 26.0
margin_top = -24.0
margin_right = 74.0
margin_bottom = 24.0
texture = ExtResource( 3 )

[node name="FTQ_Label_Status" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -380.0
margin_top = -186.0
margin_right = 380.0
margin_bottom = -146.0

[node name="FTQ_Label_Status2" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -380.0
margin_top = -131.0
margin_right = 380.0
margin_bottom = -91.0
